--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hola Mundo</title>
 <body>
  <p>
-    Hola, este es mi sitio web
+    Hola amigos, este es mi sitio web
  </p>
 
 </body>
